--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -189,6 +189,11 @@ ul.CTAs a {
     display: block
 }
 
+.card p {
+    color: black;
+    font-weight: 350;
+}
+
 
 /* ---------------------------------------------------
     MEDIAQUERIES
