--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -39,6 +39,11 @@ a:focus {
     margin: 40px 0;
 }
 
+.img-round {
+    border: 1px solid #000;
+    border-radius: 50%;
+}
+
 /* ---------------------------------------------------
     SIDEBAR STYLE
 ----------------------------------------------------- */
@@ -54,7 +59,10 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #2d3436;
+    background: url('/img/sidebar.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -67,7 +75,8 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #2d3436;
+    margin-bottom: -20px;
+    margin-top: 20px;
 }
 
 #sidebar ul.components {
@@ -87,14 +96,16 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #fff;
-    background: #2c3e50;
+    color: #000;
+    background: #f39c12;
+    border-left: 7px solid #fff;
 }
 
 #sidebar ul li.active>a,
 a[aria-expanded="true"] {
-    color: #fff;
-    background: #2c3e50;
+    color: #000;
+    background: #f39c12;
+    border-left: 7px solid #fff;
 }
 
 
