--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -205,6 +205,11 @@ ul.CTAs a {
     font-weight: 350;
 }
 
+.link-table a {
+    color: #000;
+    display: block;
+}
+
 
 /* ---------------------------------------------------
     MEDIAQUERIES
