--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -210,6 +210,10 @@ ul.CTAs a {
     display: block;
 }
 
+.tb-active {
+    background: rgb(207, 207, 207) !important;
+}
+
 
 /* ---------------------------------------------------
     MEDIAQUERIES
