--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,8 @@
 }
 
 .text-blink {
-    animation: blinkText 1s infinite;
+    animation: blinkText 2s infinite;
+    color: #000;
 }
 
 .pagination {
@@ -85,23 +86,7 @@
 
 /* keyframe */
 @keyframes blinkText {
-    0% {
-        color: #000;
-    }
-
-    49% {
-        color: transparent;
-    }
-
     50% {
-        color: transparent;
-    }
-
-    99% {
-        color: transparent;
-    }
-
-    100% {
-        color: #000;
+        opacity: 0;
     }
 }
