--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -51,6 +51,8 @@ a:focus {
 .dropdown-menu {
     width: 400px;
     margin-left: -200px;
+    max-height: 400px;
+    overflow: scroll;
 }
 
 .dropdown-menu a p {
