refisi untuk status, desain, dan acc pengumuman

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+body {
+    background: url('../img/bg-main.jpg') no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
 /* card */
 .cardhead {
     background: #2d3436;
