--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -80,7 +80,7 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: url('/img/sidebar.jpg');
+    background: url('../img/sidebar.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
