Perbaiki table yang tidak responsive

--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -309,4 +309,8 @@ ul.CTAs a {
         transform: rotate(-45deg) translate(1px, -1px);
     }
 
+    .dropdown-menu {
+        margin-left: 0px;
+        width: 100%;
+    }
 }
