--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,8 @@ body {
     background-color: rgba(255, 255, 255, 0.6) !important;
 }
 
+.h1-custom {}
+
 /* card */
 .cardhead {
     background: #2d3436;
@@ -110,5 +112,15 @@ body {
 @keyframes blinkText {
     50% {
         opacity: 0;
+    }
+}
+
+@media (max-width: 425px) {
+    .box-left {
+        width: 100%
+    }
+
+    .box-right {
+        width: 100%
     }
 }
