--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -268,6 +268,10 @@ ul.CTAs a {
     width: 150% !important;
 }
 
+.showForm{
+    display:none;
+}
+
 @keyframes blinkText {
     50% {
         opacity: 0;
