--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -276,6 +276,11 @@ ul.CTAs a {
     background-color: rgb(218, 218, 218) !important;
 }
 
+p{
+    color: #000 !important;
+    font-weight: 400;
+}
+
 @keyframes blinkText {
     50% {
         opacity: 0;
