--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -333,4 +333,18 @@ p{
     .lampiran {
         width: 46%;
     }
+
+    .card-border {
+        position: relative;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        min-width: 0;
+        word-wrap: break-word;
+        background-color: #fff;
+        background-clip: border-box;
+        border: 0px solid rgba(0,0,0,0);
+        border-radius: .25rem;
+    }
 }
