--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -1,9 +1,9 @@
 body {
     background: #ffffff;
+    font-size: .9em;
 }
 
 p {
-    font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
